[gd_scene load_steps=9 format=3 uid="uid://cauq8724wsvjn"]

[ext_resource type="FontFile" uid="uid://cdh4f8j6uv54l" path="res://Assets/Fonts/HelpMe.ttf" id="1_aid58"]
[ext_resource type="Script" path="res://Scripts/UI/DeathMenu.gd" id="1_kf7fb"]
[ext_resource type="Texture2D" uid="uid://w4qdlupoyjpj" path="res://Assets/Items/Battery.png" id="2_2ytl2"]
[ext_resource type="Resource" uid="uid://dbx3dib42tndc" path="res://Scripts/Resources/PuppetDesc.tres" id="2_qfpor"]
[ext_resource type="Resource" uid="uid://bbgcovohd2dik" path="res://Scripts/Resources/InsanityDesc.tres" id="3_l4xh0"]

[sub_resource type="Animation" id="Animation_vu277"]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DescriptionPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_802md"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DescriptionPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7xxm0"]
_data = {
"Fade": SubResource("Animation_vu277"),
"RESET": SubResource("Animation_802md")
}

[node name="DeathMenu" type="Control" groups=["DeathUI"]]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_kf7fb")
PuppetDesc = ExtResource("2_qfpor")
InsanitytDesc = ExtResource("3_l4xh0")

[node name="DescriptionPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.5
offset_top = -400.0
offset_right = 287.5
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DescriptionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="DescriptionPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 2

[node name="Title" type="MarginContainer" parent="DescriptionPanel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.5
offset_bottom = 3.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="TitleLabel" type="Label" parent="DescriptionPanel/VBoxContainer/Panel/Title"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_aid58")
theme_override_font_sizes/font_size = 40
text = "Cause of death"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="DescriptionPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ScrollContainer" type="ScrollContainer" parent="DescriptionPanel/VBoxContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NameLabel" type="Label" parent="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_aid58")
theme_override_font_sizes/font_size = 32
text = "Subject Name"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_2ytl2")

[node name="TypeLabel" type="Label" parent="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.691357, 0.691357, 0.691357, 1)
theme_override_fonts/font = ExtResource("1_aid58")
theme_override_font_sizes/font_size = 24
text = "Severe Lacerations"

[node name="EffectLabel" type="Label" parent="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_aid58")
theme_override_font_sizes/font_size = 24
text = "
Subject description"

[node name="EffectTextLabel" type="Label" parent="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Effect description goes here "
autowrap_mode = 3

[node name="EmptySpace" type="Label" parent="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "
"
autowrap_mode = 3

[node name="DescriptionLabel" type="Label" parent="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Overall enemy description/lore goes here

"
autowrap_mode = 3

[node name="RespawnButton" type="Button" parent="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Respawn
"

[node name="MenuButton" type="Button" parent="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Menu
"

[node name="QuitButton" type="Button" parent="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7xxm0")
}

[connection signal="pressed" from="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/RespawnButton" to="." method="_on_respawn_button_pressed"]
[connection signal="pressed" from="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="DescriptionPanel/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
